<resources>
    <string name="app_name" translatable="false">LMS &amp; LXP Notifier</string>
    <string name="title_passcode" translatable="false">LMS &amp; LXP</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Stay notified with the \nLMS &amp; LXP notifier</string>
    <string name="warning">This app is not officially developed by UTMN\nhttps://github.com/Hlormar/UTMN-LMS-LXP-Notifier</string>
    <string name="warning_translation">Translations powered by MyMemory. Translation may be incorrect and service may temporarily stop working due to daily usage limits</string>
    <string name="inputRequired">*Required</string>
    <string name="unacceptableChars">*Unacceptable characters</string>
    <string name="scheduleErrorMsg">
        Something went wrong\n
        Check the internet connection\n
        Or credentials correctness\n
        Possibly LMS is now down\n
        https://github.com/Hlormar/UTMN-LMS-LXP-Notifier
    </string>
    <string name="schedule_accessTime">Access time: %1$s</string>
    <string name="schedule_outdated">outdated</string>

    <string name="key1">1</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="key0">0</string>

    <string name="button_close">Close</string>

    <string name="settings_account">Account</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_language">Language</string>
    <string name="settings_translationFeature">RUS to ENG description translation</string>
    <string name="settings_timeBeforeDeadline_start">1</string>
    <string name="settings_timeBeforeDeadline_end">24</string>

    <string name="lang_current">English</string>
    <string name="lang_eng">English</string>
    <string name="lang_rus">Russian</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_passcode">Passcode</string>
    <string name="hint_lang">App language</string>
    <string name="hint_autochecks">Daily auto checks amount</string>
    <string name="hint_timeBeforeDeadline">Hours between notification and deadline</string>

    <string name="contentDesc_logo">UTMN logo</string>
    <string name="contentDesc_backspace">backspace</string>
    <string name="contentDesc_cardviewTitle">Title</string>
    <string name="contentDesc_cardviewDesc">Description</string>
    <string name="contentDesc_infoText">Parsing info</string>
    <string name="contentDesc_closePopup">Close popup</string>

    <string name="lock">Lock</string>
    <string name="settings">Settings</string>
    <string name="schedule">Schedule</string>

    <string name="popup_course">Course</string>
    <string name="popup_type">Activity type</string>
    <string name="popup_timestart">Start date</string>
    <string name="popup_duration">Duration</string>
    <string name="popup_url">Calendar</string>
    <string name="popup_description">Description</string>

    <string name="notification_name">LMS &amp; LXP tasks</string>
    <string name="notification_incoming_title">You got a new task</string>
    <string name="notification_incoming_msg">Please check the application for more details</string>
    <string name="notification_upcoming_title">Upcoming deadline</string>
    <string name="notification_upcoming_msg">%1$s at %2$s</string>


    <string name="toast_incorrectEmail">Your username does not seem to be an email. Tried to transform %1$s -> %2$s, but translation feature may not work.</string>
    <string name="toast_translating">Data received. Translating…</string>

    <!-- TODO: Remove or change this placeholder text-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>