<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tyumgu_transformed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            style="@style/InputLayout"
            app:startIconDrawable="@android:drawable/sym_action_email"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_gravity="center"
            app:endIconMode="password_toggle"
            style="@style/InputLayout"
            app:startIconDrawable="@android:drawable/ic_lock_lock"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/indicator1"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/ViewPasscode">
            </View>
            <View
                android:id="@+id/indicator2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/ViewPasscode">
            </View>
            <View
                android:id="@+id/indicator3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/ViewPasscode">
            </View>
            <View
                android:id="@+id/indicator4"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/ViewPasscode">
            </View>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                style="@style/ButtonPasscode"
                android:text="@string/key1" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key2" />

            <Button
                android:id="@+id/button3"
                style="@style/ButtonPasscode"
                android:text="@string/key3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/ButtonPasscode"
                android:text="@string/key4" />

            <Button
                android:id="@+id/button5"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key5" />

            <Button
                android:id="@+id/button6"
                style="@style/ButtonPasscode"
                android:text="@string/key6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/ButtonPasscode"
                android:text="@string/key7" />

            <Button
                android:id="@+id/button8"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key8" />

            <Button
                android:id="@+id/button9"
                style="@style/ButtonPasscode"
                android:text="@string/key9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFake"
                style="@style/ButtonPasscode"
                android:visibility="invisible">
            </Button>

            <Button
                android:id="@+id/button0"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key0" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.5"
                android:scaleY="1.5"
                style="@style/ButtonDeleteInput">
            </ImageButton>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning">
        </TextView>

    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>