<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="144dp"
            android:layout_height="144dp"
            style="@style/LogoViewImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcome"
            android:contentDescription="@string/contentDesc_logo"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.Material.Title"
            android:textSize="26sp"
            android:text="@string/title_passcode"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline25"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <LinearLayout
            android:id="@+id/layoutIndicators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guideline50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/indicator1"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/PasscodeIndicator"/>

            <View
                android:id="@+id/indicator2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/PasscodeIndicator"/>

            <View
                android:id="@+id/indicator3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/PasscodeIndicator"/>

            <View
                android:id="@+id/indicator4"
                android:layout_width="15dp"
                android:layout_height="15dp"
                style="@style/PasscodeIndicator"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNums1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutIndicators"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:text="@string/key1"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:text="@string/key3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNums2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutNums1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:text="@string/key4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:text="@string/key6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNums3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutNums2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:text="@string/key7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:text="@string/key9" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNums4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutNums3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFake"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/button0"
                android:layout_width="55dp"
                android:layout_height="55dp"
                style="@style/ButtonPasscode"
                android:layout_marginHorizontal="35dp"
                android:text="@string/key0" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonDeleteInput"
                android:contentDescription="@string/contentDesc_backspace"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>