<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PopupLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Material.Title"
                android:layout_gravity="start"
                android:textSize="28sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:clickable="false"
                android:focusable="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                        android:textSize="20sp"
                        android:text="@string/popup_course"/>

                    <TextView
                        android:id="@+id/course"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Body1"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                        android:layout_marginTop="7dp"
                        android:textSize="20sp"
                        android:text="@string/popup_type"/>

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Body1"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                        android:layout_marginTop="7dp"
                        android:textSize="20sp"
                        android:text="@string/popup_timestart"/>

                    <TextView
                        android:id="@+id/timestart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Body1"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                        android:layout_marginTop="7dp"
                        android:textSize="20sp"
                        android:text="@string/popup_duration"/>

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Body1"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                        android:layout_marginTop="7dp"
                        android:textSize="20sp"
                        android:text="@string/popup_url"/>

                    <TextView
                        android:id="@+id/url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Body1"
                        android:textSize="16sp"
                        android:linksClickable="true"
                        android:textColorLink="@color/utmn"
                        android:autoLink="web"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:clickable="false"
                android:focusable="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
                        android:textSize="20sp"
                        android:text="@string/popup_description"/>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@android:style/TextAppearance.Material.Body1"
                        android:textSize="16sp"
                        android:linksClickable="true"
                        android:textColorLink="@color/utmn"
                        android:autoLink="web"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>