<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:errorEnabled="true"
            android:layout_gravity="center"
            app:endIconMode="clear_text"
            style="@style/InputLayout"
            app:startIconDrawable="@android:drawable/sym_action_email"
            android:hint="@string/hint_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_gravity="center"
            app:endIconMode="password_toggle"
            style="@style/InputLayout"
            app:startIconDrawable="@android:drawable/ic_lock_lock"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passcodeLayout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_gravity="center"
            app:endIconMode="password_toggle"
            style="@style/InputLayout"
            app:startIconDrawable="@android:drawable/ic_lock_lock"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            android:layout_marginVertical="10dp"
            android:hint="@string/hint_passcode">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passcodeEdit"
                android:maxLength="4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100">
        </View>

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_weight="20"
            android:linksClickable="true"
            android:textColorLink="@color/utmn"
            android:autoLink="web"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/warning">
        </TextView>
    </LinearLayout>


</FrameLayout>